<resources>
    <string name="app_name">MyAnimeList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="indietro">Indietro</string>


    <string name="cliccami">Cliccami</string>
    <string name="hello_world">Hello world!</string>
    <string name="descrizione_avatar">descrizione avatar</string>
    <string name="button_one_secondfragment">Errore. Riprova più tardi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="accedi_per_continuare">Accedi per continuare</string>
    <string name="ops_qualcosa_andato_storto">Ops! Qualcosa è andato storto... :(</string>
    <string name="riprova">Riprova</string>
    <string name="inserisci_la_tua_email">inserisci la tua email...</string>
    <string name="accedi">ACCEDI</string>
    <string name="animeview">animeView</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_anime">Lista Anime</string>

</resources>