<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/box_one_text"
        android:layout_width="213dp"
        android:layout_height="68dp"
        android:layout_marginTop="280dp"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliccami"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_one_text"
        app:layout_constraintVertical_bias="0.346" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="63dp"
        android:layout_height="66dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/descrizione_avatar"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_one_text"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>